WIP: Background color changing based on pokemon type

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="skip_button">Pular</string>
     <string name="create_account_button">Criar conta</string>
     <string name="already_has_account_button">Já tenho uma conta</string>
+    <string name="search_bar_hint">Procurar Pókemon</string>
 
 
 </resources>
