FEAT: Pokemon Weaknesses added to Pokemon Details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="height_title">ALTURA</string>
     <string name="category_title">CATEGORIA</string>
     <string name="ability_title">HABILIDADE</string>
+    <string name="weaknesses_title">Fraquezas</string>
 </resources>
